--- a/TermExcelerator/Sdl.Community.TermExcelerator/Sdl.Community.TermExcelerator.csproj
+++ b/TermExcelerator/Sdl.Community.TermExcelerator/Sdl.Community.TermExcelerator.csproj
@@ -4,9 +4,9 @@
 		<TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19beta</TradosFolder>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
   <ItemGroup>
