--- a/Qualitivity/Sdl.Community.Qualitivity/Sdl.Community.Qualitivity.csproj
+++ b/Qualitivity/Sdl.Community.Qualitivity/Sdl.Community.Qualitivity.csproj
@@ -24,7 +24,7 @@
 		<UseApplicationTrust>false</UseApplicationTrust>
 		<EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
 		<BootstrapperEnabled>true</BootstrapperEnabled>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
