--- a/SDLXLIFF to Legacy Converter/Sdl.Community.XliffReadWrite/Sdl.Community.XliffReadWrite.csproj
+++ b/SDLXLIFF to Legacy Converter/Sdl.Community.XliffReadWrite/Sdl.Community.XliffReadWrite.csproj
@@ -19,7 +19,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <Configurations>CD_ROM;Debug;DVD-5;Release;SingleImage</Configurations>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
