--- a/Target Word Count/Sdl.Community.TargetWordCount/Sdl.Community.TargetWordCount.csproj
+++ b/Target Word Count/Sdl.Community.TargetWordCount/Sdl.Community.TargetWordCount.csproj
@@ -194,7 +194,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
