--- a/Trados Transcreate/SDLTranscreate/Transcreate.csproj
+++ b/Trados Transcreate/SDLTranscreate/Transcreate.csproj
@@ -6,7 +6,7 @@
 		<RootNamespace>Trados.Transcreate</RootNamespace>
 		<AssemblyName>Trados.Transcreate</AssemblyName>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
