--- a/memoQ Translation Memory Provider/TradosPlugin/TradosPlugin.csproj
+++ b/memoQ Translation Memory Provider/TradosPlugin/TradosPlugin.csproj
@@ -416,7 +416,7 @@
   </ItemGroup>
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
