--- a/Amazon Translate MT provider/Sdl.Community.AmazonTranslateTradosPlugin.csproj
+++ b/Amazon Translate MT provider/Sdl.Community.AmazonTranslateTradosPlugin.csproj
@@ -8,7 +8,7 @@
 		<LangVersion>latest</LangVersion>
 		<UseWPF>true</UseWPF>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 	</PropertyGroup>
 
 	<ItemGroup>
