--- a/ApplyTM Template/Sdl.Community.ApplyTMTemplate/Sdl.Community.ApplyTMTemplate.csproj
+++ b/ApplyTM Template/Sdl.Community.ApplyTMTemplate/Sdl.Community.ApplyTMTemplate.csproj
@@ -5,7 +5,7 @@
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
 	</PropertyGroup>
 	<ItemGroup>
