--- a/Capture QA Rule State/CaptureQARuleState/CaptureQARuleState.csproj
+++ b/Capture QA Rule State/CaptureQARuleState/CaptureQARuleState.csproj
@@ -7,7 +7,7 @@
 		<LangVersion>latest</LangVersion>
 		<UseWPF>true</UseWPF>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="Resources\alert.gif" />
