--- a/CleanUp Tasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
+++ b/CleanUp Tasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>SDLCommunityCleanUpTasks</AssemblyName>
     <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
 	  <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
