--- a/Code samples/AddTUToTM/AddTUToTM/AddTUToTM.csproj
+++ b/Code samples/AddTUToTM/AddTUToTM/AddTUToTM.csproj
@@ -12,7 +12,7 @@
 		<AssemblyName>AddTUToTM</AssemblyName>
 		<TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
 		<FileAlignment>512</FileAlignment>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<NuGetPackageImportStamp>
 		</NuGetPackageImportStamp>
 	</PropertyGroup>
