--- a/Code samples/ChromiumBrowserSupport/ChromiumBrowserSupport/ChromiumBrowserSupport.csproj
+++ b/Code samples/ChromiumBrowserSupport/ChromiumBrowserSupport/ChromiumBrowserSupport.csproj
@@ -13,7 +13,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
