--- a/Code samples/DeleteCommentsExample/DeleteCommentsExample.csproj
+++ b/Code samples/DeleteCommentsExample/DeleteCommentsExample.csproj
@@ -6,7 +6,7 @@
 		<TradosFolder>C:\Code\bin\Mixed Platforms\Debug</TradosFolder>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 	</PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Core.Globalization">
