--- a/Code samples/GlobalVerifierSample/GlobalVerifierSample/GlobalVerifierSample.csproj
+++ b/Code samples/GlobalVerifierSample/GlobalVerifierSample/GlobalVerifierSample.csproj
@@ -4,7 +4,7 @@
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<OutputType>Library</OutputType>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWindowsForms>true</UseWindowsForms>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
