--- a/Code samples/ProjectAutomation/ProjectAutomation/ProjectAutomation.csproj
+++ b/Code samples/ProjectAutomation/ProjectAutomation/ProjectAutomation.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
