--- a/Code samples/SampleTerminologyPlugin/MySampleTerminology/MySampleTerminology.csproj
+++ b/Code samples/SampleTerminologyPlugin/MySampleTerminology/MySampleTerminology.csproj
@@ -5,7 +5,7 @@
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
