--- a/Code samples/SimpleTranslationProvider/SimpleTranslationProvider.csproj
+++ b/Code samples/SimpleTranslationProvider/SimpleTranslationProvider.csproj
@@ -4,7 +4,7 @@
   	<TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
   	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  	<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+  	<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Core.Globalization">
