--- a/DSI Viewer/Sdl.Community.SdiViewer/Sdl.Community.DsiViewer.csproj
+++ b/DSI Viewer/Sdl.Community.SdiViewer/Sdl.Community.DsiViewer.csproj
@@ -4,7 +4,7 @@
         <PlatformTarget>x64</PlatformTarget>
     <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
