--- a/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
+++ b/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 	</PropertyGroup>
 	<ItemGroup>
 		<Reference Include="Microsoft.CSharp" />
