--- a/Google Cloud Translation Provider/GoogleCloudTranslationProvider.csproj
+++ b/Google Cloud Translation Provider/GoogleCloudTranslationProvider.csproj
@@ -6,7 +6,7 @@
 		<TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
 		<LangVersion>latest</LangVersion>
 		<UseWPF>true</UseWPF>
