--- a/MXLIFF File Type/Sdl.Community.FileTypeSupport.MXLIFF.csproj
+++ b/MXLIFF File Type/Sdl.Community.FileTypeSupport.MXLIFF.csproj
@@ -5,7 +5,7 @@
 		<TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
 	</PropertyGroup>
 	<ItemGroup>
