--- a/Multilingual XML FileType/Multilingual.XML.FileType/Multilingual.XML.FileType.csproj
+++ b/Multilingual XML FileType/Multilingual.XML.FileType/Multilingual.XML.FileType.csproj
@@ -4,7 +4,7 @@
         <PlatformTarget>x64</PlatformTarget>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
