--- a/Rapid Add Term/RapidAddTerm/Sdl.Community.RapidAddTerm.csproj
+++ b/Rapid Add Term/RapidAddTerm/Sdl.Community.RapidAddTerm.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
 		<MultiTermFolder>$(MSBuildProgramFiles32)\Trados\MultiTerm\MultiTerm18</MultiTermFolder>
 		<CreatePluginPackage>true</CreatePluginPackage>
