--- a/SDLXLIFF to Legacy Converter/Sdl.Community.XliffToLegacyConverter.Core/Sdl.Community.XliffToLegacyConverter.Core.csproj
+++ b/SDLXLIFF to Legacy Converter/Sdl.Community.XliffToLegacyConverter.Core/Sdl.Community.XliffToLegacyConverter.Core.csproj
@@ -19,7 +19,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <Configurations>CD_ROM;Debug;DVD-5;Release;SingleImage</Configurations>
