--- a/SDLXLIFF to Legacy Converter/Sdl.Community.XliffToLegacyConverter/Sdl.Community.XliffToLegacyConverter.csproj
+++ b/SDLXLIFF to Legacy Converter/Sdl.Community.XliffToLegacyConverter/Sdl.Community.XliffToLegacyConverter.csproj
@@ -30,7 +30,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
