--- a/SdlXliff Compare/Sdl.Community.XliffCompare/Sdl.Community.XliffCompare.csproj
+++ b/SdlXliff Compare/Sdl.Community.XliffCompare/Sdl.Community.XliffCompare.csproj
@@ -4,7 +4,7 @@
         <PlatformTarget>x64</PlatformTarget>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
