--- a/Trados Batch Anonymizer/SDLBatchAnonymize/Sdl.Community.SDLBatchAnonymize.csproj
+++ b/Trados Batch Anonymizer/SDLBatchAnonymize/Sdl.Community.SDLBatchAnonymize.csproj
@@ -16,7 +16,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
 	</PropertyGroup>
 
