--- a/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Lib/Sdl.Community.Utilities.TMTool.Lib.csproj
+++ b/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Lib/Sdl.Community.Utilities.TMTool.Lib.csproj
@@ -12,7 +12,7 @@
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
