--- a/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Task/Sdl.Community.Utilities.TMTool.Task.csproj
+++ b/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Task/Sdl.Community.Utilities.TMTool.Task.csproj
@@ -4,7 +4,7 @@
         <PlatformTarget>x64</PlatformTarget>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
