--- a/TuToTm/TuToTm/Sdl.Community.TuToTm.csproj
+++ b/TuToTm/TuToTm/Sdl.Community.TuToTm.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
     <OutputType>Library</OutputType>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <UseWindowsForms>true</UseWindowsForms>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
